# permve-ntnu-it3708

./: .gitignore  README.md
errata/permve-intelligence-emerging-errata-chapter-12/: permve-intelligence-emerging-errata-chapter-12.tex
errata/permve-intelligence-emerging-errata-ea-rank/: permve-intelligence-emerging-errata-ea-rank.tex
project_1/program/: app.py
project_1/report/: permve-ntnu-it3708-project-1.tex
project_1_2017/data/: evaluate-baseline-prefer-right-go-sideways-1M.txt  evaluate-baseline-prefer-right-go-sideways-prefer-avoid-wall-1M.txt  evaluate-baseline-prefer-right-go-sideways-take-food-near-wall-1M.txt  evaluate-baseline-prefer-right-go-straight-1M.txt  evaluate-baseline-prefer-right-go-straight-prefer-avoid-wall-1M.txt  evaluate-baseline-prefer-right-go-straight-take-food-near-wall-1M.txt  generate-baseline-evaluations.bash  generate-learning-curves.bash  generate-super-reinforcement-agent.bash  generate.bash  learning-curve-reinforcement-1-sensor-range-25-training-rounds-100-size-30-repetitions.txt  learning-curve-reinforcement-1-sensor-range-30-training-rounds-100-size-30-repetitions.txt  learning-curve-reinforcement-3-sensor-range-25-training-rounds-100-size-30-repetitions.txt  scenarios.txt  super-reinforcement-agent.pickle  (+4 more)
project_2/program/: CMakeLists.txt  lolz.cpp  onemax.cpp  surprising.cpp  test.cpp
project_2/program/vi/: algo.h  ea.h
project_3_2017/program/: CMakeLists.txt  mtsp.cpp  segmentation.cpp  vi_algo.hpp  vi_ea_nsga2.hpp  vi_image_segmentation.hpp  vi_segment.hpp
project_5/program/: CMakeLists.txt  console.py  create_parameter_plot_data.py  create_population_plots.py  gui.py  list_best_parameter_runs.py  mtsp.py  nsga2.py  run_parameter_tests.py  tiny.py  tsp_moea.cpp
vi/: ea.py  tmp
vi-ann/: package.json  vi-ann.js
vi-beer-tracker-app/: .gitignore  gulpfile.js  package.json  vi-beer-tracker-app.js
vi-beer-tracker-widget/: package.json  vi-beer-tracker-widget.js
vi-ea/: package.json  vi-ea.js
vi-flatland/: gulpfile.js  package.json  vi-flatland.js
vi-flatland-app/: .gitignore  gulpfile.js  package.json
vi-flatland-ea/: package.json  vi-flatland-ea.js
vi-flatland-world/: .gitignore  package.json  vi-flatland-world.js
vi-utility/: package.json  vi-utility.js
vi_tests/: onemax.py
(+298 files in other folders)
